Fix bug for overflow hidden on html

--- a/public/main.css
+++ b/public/main.css
@@ -1,9 +1,8 @@
-/* html { height: 100% } 
+html { height: 100% } 
 
 .body-container{
-
     overflow: hidden;
-} */
+}
 
 .contact-info{
     position: absolute;
